@@ -1,17 +1,17 @@
 from distutils.core import setup
 
 setup(
-    name = 'simplestatistics',
-    packages = ['simplestatistics', 'simplestatistics.statistics'],
-    version = '0.3.0',
-    description = 'Simple statistical functions implemented in readable Python.',
-    author = 'Sherif Soliman',
-    author_email = 'sherif@ssoliman.com',
-    copyright = 'Copyright (c) 2016 Sherif Soliman',
-    url = 'https://github.com/sheriferson/simplestatistics',
-    download_url = 'https://github.com/sheriferson/simplestatistics/tarball/0.3.0',
-    keywords = ['statistics', 'math'],
-    classifiers = [
+    name='simplestatistics',
+    packages=['simplestatistics', 'simplestatistics.statistics'],
+    version='0.3.0',
+    description='Simple statistical functions implemented in readable Python.',
+    author='Sherif Soliman',
+    author_email='sherif@ssoliman.com',
+    copyright='Copyright (c) 2016 Sherif Soliman',
+    url='https://github.com/sheriferson/simplestatistics',
+    download_url='https://github.com/sheriferson/simplestatistics/tarball/0.3.0',
+    keywords=['statistics', 'math'],
+    classifiers=[
         'Programming Language :: Python :: 2',
         'Programming Language :: Python :: 3',
         'Topic :: Scientific/Engineering :: Mathematics',
